2007-11-25  Pedro Alves  <pedro_alves@portugalmail.pt>
	    Danny Backx  <dannybackx@users.sourceforge.net>

	* cegcc/importlibs/build.sh: Remove import lib for icmplib, MSDN
	says it's a static library only.

2007-09-03  Danny Backx  <dannybackx@users.sourceforge.net>

	* cegcc/importlibs/build.sh: Generate import lib for the toolhelp
	library.

2007-06-13  Pedro Alves  <pedro_alves@portugalmail.pt>

	* mingw-fake_crt: Remove.

2007-06-13  Pedro Alves  <pedro_alves@portugalmail.pt>

	* script.sh: Rename to ...
	* build-mingw32ce-dlls.sh: ... this.

2007-06-02  Danny Backx  <dannybackx@users.sourceforge.net>

	* cegcc/libstdc++/Makefile : Remove THE_SYSTEM_LIBS variable, somehow
	it broke the build, and apparently I was once wrong in thinking this
	needed to be different for some builds.

2007-05-28  Danny Backx  <dannybackx@users.sourceforge.net>

	* build-cegcc.sh (build_libstdcppdll) : Add error handling.

2007-05-13  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh: Rewrite command line parameters logic.
	Add '--prefix' and '--components' options.  Don't mkdir
	build-mingw32ce.  Build on cwd.

2007-03-27  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh (build_import_libs): Delete.
	(build_mingw_fake_runtime): Delete.
	(copy_headers): Delete.
	(build_all): Remove calls to build_import_libs,
	build_mingw_fake_runtime, and copy headers.  Add
	call to build_w32api.
	Remove importlibs,headers and fakecrt command line
	options.  Rename crt option to mingw.

2007-02-12  Pedro Alves  <pedro_alves@portugalmail.pt>

	* VERSIONS : Update w32api and mingw versions.

2007-02-04  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh (copy_headers) : Copy includes from the sys
	subdirectory too.
	* build-cegcc.sh (copy_w32api_headers) : Copy includes from the GL,
	directx, ddk subdirectories too.

2007-02-01  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh : Add help text to explain