@@ -1,3 +1,7 @@
+2007-12-17  Pedro Alves  <pedro_alves@portugalmail.pt>
+
+	* build-mingw32ce.sh: Make it build with sh.
+
 2007-11-25  Pedro Alves  <pedro_alves@portugalmail.pt>
 	    Danny Backx  <dannybackx@users.sourceforge.net>
 
